[package]
name = "easysales-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version="1.0.71", features=["backtrace"] }
dashmap = "5.4.0"
fastrand = "2.0.0"
futures-util = { version="0.3.28", features=["sink"] }
hex = "0.4.3"
hmac = "0.12.1"
serde = { version="1.0.164", features=["serde_derive"] }
serde_json = "1.0.97"
sha2 = "0.10.7"
tokio = { version="1.28.2", features=["rt-multi-thread", "io-util", "macros", "net", "time"] }
tokio-util = { version="0.7.8", features=["codec"] }
toml = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version="1.3.4", features=["serde", "v4"] }

[dev-dependencies]
lazy_static = "1.4.0"
rstest = "0.17.0"
tokio = { version="1.28.2", features=["sync"] }